update conda versions

--- a/environment.yml
+++ b/environment.yml
@@ -4,7 +4,8 @@ channels:
     - gpytorch
 dependencies:
     - python=3.7
-    - botorch==0.2.0
+    - botorch=0.2.1
+    - ax=0.1.9
     - jupyter
     - nb_conda
     - pytest
